Creacion del onboarding y actualizacion en los demas controladores y validaciones
